--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
         working-directory: ./extension/
         RELEASE_TYPE: ${{ github.event.inputs.releaseType }}
         VSCE_PAT: ${{ secrets.VSCE_PAT }}
+        BASE_CONTENT_URL: https://github.com/jwikman/nab-al-tools/raw/master/extension
       steps:
         - name: Changelog check
           if: ${{ github.event.inputs.updatedChangelog == 'false' }}
@@ -51,19 +52,24 @@ jobs:
           shell: pwsh
           run: |
             ../dev-tools/PowerShell/library/Publish-ToMarketPlace-Workflow.ps1 -releaseType "pre-release" -preReleaseOnRelease
-            git push
-            git push --tags
           working-directory: ${{env.working-directory}}
 
         - name: Publish pre-release on release to Visual Studio Marketplace
           if: ${{env.RELEASE_TYPE == 'release'}}
-          uses: HaaLeo/publish-vscode-extension@v1
-          with:
-            preRelease: true
-            pat: ${{ secrets.VSCE_PAT }}
-            registryUrl: https://marketplace.visualstudio.com
-            baseContentUrl: https://github.com/jwikman/nab-al-tools/raw/master/extension
-            extensionFile: ${{ steps.preReleaseOnRelease.outputs.vsixPath }}
+          shell: pwsh
+          run: |
+            if ($env:RELEASE_TYPE -eq 'release') {
+                Write-Host "publish pre-release on release"
+                vsce publish  --pre-release --packagePath ${{ steps.preReleaseOnRelease.outputs.vsixPath }} --baseContentUrl $env:BASE_CONTENT_URL
+            } else {
+                Write-Error "Release type '$($env:RELEASE_TYPE)' is not supported for pre-release on release." -ErrorAction Stop
+            }
+
+        - name: Push Commits on pre-release on release
+          if: ${{env.RELEASE_TYPE == 'release'}}
+          run: |
+            git push
+            git push --tags
 
         - name: "Package: ${{ env.RELEASE_TYPE }}"
           id: packageVSIX
@@ -82,17 +88,15 @@ jobs:
         - name: Publish ${{env.RELEASE_TYPE }} to Visual Studio Marketplace
           shell: pwsh
           run: |
-            Write-Host "List all environment variables:"
-            Write-Host ""
-            Get-ChildItem env:* | Sort-Object name | ForEach-Object { Write-Host "$($_.Name): $($_.Value)" }   
-
             if ($env:RELEASE_TYPE -eq 'pre-release') {
                 Write-Host "publish pre-release"
-                vsce publish  --pre-release --packagePath ${{ steps.packageVSIX.outputs.vsixPath }} --baseContentUrl "https://github.com/jwikman/nab-al-tools/raw/master/extension"
+                vsce publish  --pre-release --packagePath ${{ steps.packageVSIX.outputs.vsixPath }} --baseContentUrl $env:BASE_CONTENT_URL
             }
             elseif ($env:RELEASE_TYPE -eq 'release') {
                 Write-Host "publish release"
-                vsce publish --packagePath ${{ steps.packageVSIX.outputs.vsixPath }} --baseContentUrl "https://github.com/jwikman/nab-al-tools/raw/master/extension"
+                vsce publish --packagePath ${{ steps.packageVSIX.outputs.vsixPath }} --baseContentUrl $env:BASE_CONTENT_URL
+            } else {
+                Write-Error "Release type '$($env:RELEASE_TYPE)' is not supported." -ErrorAction Stop
             }
 
         - name: Push Commits
@@ -107,12 +111,3 @@ jobs:
             tag: ${{ steps.packageVSIX.outputs.tagName }}
             prerelease: ${{env.RELEASE_TYPE == 'pre-release'}}
             artifacts: "${{ steps.packageVSIX.outputs.vsixPath }}"
-
-
-        # If the run failed, npm log may help to diagnose.
-        - name: "(debug) Upload npm log"
-          if: ${{ !success() }}
-          uses: actions/upload-artifact@v2
-          with:
-            name: "npm-debug-log"
-            path: "~/.npm/_logs"
