--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -40,8 +40,8 @@ jobs:
 
         - name: Git config
           run: |
-            git config user.name 'github-actions[bot]'
-            git config user.email 'github-actions[bot]@users.noreply.github.com'
+            git config user.name 'jwikman'
+            git config user.email 'jwikman@users.noreply.github.com'
             git config advice.addIgnoredFile false
 
         - name: Install dependencies
@@ -105,7 +105,7 @@ jobs:
 
         - name: Push Commits
           run: |
-            git push
+            git push --force
             git push --tags
 
         - name: Create GitHub Release
