--- a/extension/package.json
+++ b/extension/package.json
@@ -616,6 +616,24 @@
             "description": "When creating external documentation, this setting specifies if an UID should be created in a Yaml Header in each generated md file. The UID can then be used for linking in DocFx.",
             "scope": "resource"
           },
+          "NAB.documentation.yamlTitle.enabled": {
+            "type": "boolean",
+            "default": true,
+            "description": "When creating external documentation, this setting specifies if a title should be created in a Yaml Header in each generated md file.",
+            "scope": "resource"
+          },
+          "NAB.documentation.yamlTitle.prefix": {
+            "type": "string",
+            "default": "",
+            "description": "When creating external documentation, this setting specifies a prefix to the YAML title created in the Yaml Header in each generated md file. This settings is only used if the 'NAB.documentation.yamlTitle.enabled' setting is enabled. The special containers {appName}, {publisher} and {version} can be used in this setting, they will be replaced by the values from app.json when the title is created.",
+            "scope": "resource"
+          },
+          "NAB.documentation.yamlTitle.suffix": {
+            "type": "string",
+            "default": " | {appName}",
+            "description": "When creating external documentation, this setting specifies a suffix to the YAML title created in the Yaml Header in each generated md file. This settings is only used if the 'NAB.documentation.yamlTitle.enabled' setting is enabled. The special containers {appName}, {publisher} and {version} can be used in this setting, they will be replaced by the values from app.json when the title is created.",
+            "scope": "resource"
+          },
           "NAB.RemoveObjectNamePrefixFromDocs": {
             "type": "string",
             "default": "",
