--- a/test-app/Xliff-test/docs/TOC.yml
+++ b/test-app/Xliff-test/docs/TOC.yml
@@ -115,6 +115,12 @@
     - name: customer
       href: api-page-test-customer-api/TOC.yml
       topicHref: api-page-test-customer-api/index.md
+    - name: test
+      href: api-page-nab-api-test/TOC.yml
+      topicHref: api-page-nab-api-test/index.md
+    - name: testSub
+      href: api-page-nab-api-sub-test/TOC.yml
+      topicHref: api-page-nab-api-sub-test/index.md
 - name: Deprecated Features
   href: deprecated-features.md
   items:
