--- a/extension/package.json
+++ b/extension/package.json
@@ -607,7 +607,7 @@
           "NAB.documentation.api.IncludeDataType": {
             "type": "boolean",
             "default": true,
-            "description": "When creating external documentation, this setting specifies if the data types of fields on API pages should be included.",
+            "description": "When creating external documentation, this setting specifies if the data types of fields on API pages should be included. The Data Type will only be available if the field source is a table field or a global variable.",
             "scope": "resource"
           },
           "NAB.CreateInfoFileForDocs": {
