--- a/extension/package.json
+++ b/extension/package.json
@@ -604,6 +604,12 @@
             "description": "When creating external documentation, this setting specifies if all tables and fields should be included. If not enabled, only tables with public procedures will be included.",
             "scope": "resource"
           },
+          "NAB.documentation.api.IncludeDataType": {
+            "type": "boolean",
+            "default": true,
+            "description": "When creating external documentation, this setting specifies if the data types of fields on API pages should be included. The Data Type will only be available if the field source is a table field or a global variable.",
+            "scope": "resource"
+          },
           "NAB.CreateInfoFileForDocs": {
             "type": "boolean",
             "default": true,
@@ -614,6 +620,24 @@
             "type": "boolean",
             "default": true,
             "description": "When creating external documentation, this setting specifies if an UID should be created in a Yaml Header in each generated md file. The UID can then be used for linking in DocFx.",
+            "scope": "resource"
+          },
+          "NAB.documentation.yamlTitle.enabled": {
+            "type": "boolean",
+            "default": true,
+            "description": "When creating external documentation, this setting specifies if a title should be created in a Yaml Header in each generated md file.",
+            "scope": "resource"
+          },
+          "NAB.documentation.yamlTitle.prefix": {
+            "type": "string",
+            "default": "",
+            "description": "When creating external documentation, this setting specifies a prefix to the YAML title created in the Yaml Header in each generated md file. This settings is only used if the 'NAB.documentation.yamlTitle.enabled' setting is enabled. The special containers {appName}, {publisher} and {version} can be used in this setting, they will be replaced by the values from app.json when the title is created.",
+            "scope": "resource"
+          },
+          "NAB.documentation.yamlTitle.suffix": {
+            "type": "string",
+            "default": " | {appName}",
+            "description": "When creating external documentation, this setting specifies a suffix to the YAML title created in the Yaml Header in each generated md file. This settings is only used if the 'NAB.documentation.yamlTitle.enabled' setting is enabled. The special containers {appName}, {publisher} and {version} can be used in this setting, they will be replaced by the values from app.json when the title is created.",
             "scope": "resource"
           },
           "NAB.RemoveObjectNamePrefixFromDocs": {
