remove required property from required properties ;)

--- a/extension/syntaxes/templateSettingsSyntax.json
+++ b/extension/syntaxes/templateSettingsSyntax.json
@@ -241,8 +241,7 @@
       "uniqueItems": true,
       "required": [
         "description",
-        "command",
-        "required"
+        "command"
       ],
       "additionalProperties": false,
       "properties": {
