update path for Telemetry.ts

--- a/extension/.nycrc.json
+++ b/extension/.nycrc.json
@@ -12,11 +12,11 @@
     "src/cli/*",
     "src/Logging/*.ts",
     "src/extension.ts",
-    "src/Telemetry.ts",
     "src/DebugTests.ts",
     "src/PowerShell.ts",
     "src/NABfunctions.ts",
     "src/XlfHighlighter.ts",
+    "src/Telemetry/Telemetry.ts",
     "src/PowerShellFunctions.ts",
     "src/Template/TemplatePanel.ts",
     "src/XliffEditor/XliffEditorPanel.ts",
