--- a/test-app/Xliff-test/docs/codeunit-nab-public-test-codeunit/TOC.yml
+++ b/test-app/Xliff-test/docs/codeunit-nab-public-test-codeunit/TOC.yml
@@ -3,5 +3,7 @@ items:
     href: test-method.md
   - name: TestMethodWithRecReturn
     href: test-method-with-rec-return.md
+  - name: TestOverload
+    href: test-overload.md
   - name: TestDeprecatedMethod
     href: test-deprecated-method.md
