test: Improving coverage of Documentation (#370)

--- a/test-app/Xliff-test/docs/TOC.yml
+++ b/test-app/Xliff-test/docs/TOC.yml
@@ -4,7 +4,10 @@
   - name: Codeunits
     href: codeunits.md
     items:
-    - name: NAB Public Test Codeunit
+    - name: Implementation
+      href: codeunit-nab-implementation/TOC.yml
+      topicHref: codeunit-nab-implementation/index.md
+    - name: Public Test Codeunit
       href: codeunit-nab-public-test-codeunit/TOC.yml
       topicHref: codeunit-nab-public-test-codeunit/index.md
   - name: Tables
@@ -13,73 +16,82 @@
     - name: Empty
       href: table-empty/TOC.yml
       topicHref: table-empty/index.md
-    - name: NAB NABX The Deprecated Table
+    - name: NABX The Deprecated Table
       href: table-nab-nabx-the-deprecated-table/TOC.yml
       topicHref: table-nab-nabx-the-deprecated-table/index.md
-    - name: NAB Test Table
+    - name: Test Table
       href: table-nab-test-table/TOC.yml
       topicHref: table-nab-test-table/index.md
-    - name: NAB ToolTip
+    - name: ToolTip
       href: table-nab-tool-tip/TOC.yml
       topicHref: table-nab-tool-tip/index.md
   - name: Table Extensions
     href: table-extensions.md
     items:
-    - name: NAB Test Table Ext
+    - name: Test Table Ext
       href: tableextension-nab-test-table-ext/TOC.yml
       topicHref: tableextension-nab-test-table-ext/index.md
-    - name: NAB ToolTip
+    - name: ToolTip
       href: tableextension-nab-tool-tip/TOC.yml
       topicHref: tableextension-nab-tool-tip/index.md
   - name: Pages
     href: pages.md
     items:
-    - name: NAB Test Table
+    - name: Test Table
       href: page-nab-test-table/TOC.yml
       topicHref: page-nab-test-table/index.md
-    - name: NAB Test View
+    - name: Test View
       href: page-nab-test-view/TOC.yml
       topicHref: page-nab-test-view/index.md
-    - name: NAB ToolTip Part 1
+    - name: ToolTip Part 1
       href: page-nab-tool-tip-part-1/TOC.yml
       topicHref: page-nab-tool-tip-part-1/index.md
-    - name: NAB ToolTip Part 2
+    - name: ToolTip Part 2
       href: page-nab-tool-tip-part-2/TOC.yml
       topicHref: page-nab-tool-tip-part-2/index.md
-    - name: NAB ToolTips
+    - name: ToolTips
       href: page-nab-tool-tips/TOC.yml
       topicHref: page-nab-tool-tips/index.md
-    - name: NAB With Grid
+    - name: With Grid
       href: page-nab-with-grid/TOC.yml
       topicHref: page-nab-with-grid/index.md
+    - name: WS Deprecated
+      href: page-nab-ws-deprecated/TOC.yml
+      topicHref: page-nab-ws-deprecated/index.md
   - name: Page Extensions
     href: page-extensions.md
     items:
-    - name: NAB Test PageExt
+    - name: Test PageExt
       href: pageextension-nab-test-page-ext/TOC.yml
       topicHref: pageextension-nab-test-page-ext/index.md
-    - name: NAB ToolTip Item
+    - name: ToolTip Item
       href: pageextension-nab-tool-tip-item/TOC.yml
       topicHref: pageextension-nab-tool-tip-item/index.md
   - name: Reports
     href: reports.md
     items:
-    - name: NAB Test Report
+    - name: Test Report
       href: report-nab-test-report/TOC.yml
       topicHref: report-nab-test-report/index.md
+  - name: Interfaces
+    href: interfaces.md
+    items:
+    - name: Test Interface
+      href: interface-nab-test-interface/TOC.yml
+      topicHref: interface-nab-test-interface/index.md
   - name: Queries
     href: queries.md
     items:
-    - name: NAB Test Query
+    - name: Test Query
       href: query-nab-test-query/TOC.yml
       topicHref: query-nab-test-query/index.md
   - name: Enums
     href: enums.md
     items:
-    - name: NAB Calculation Method
+    - name: Calculation Method
       href: enum-nab-calculation-method/TOC.yml
       topicHref: enum-nab-calculation-method/index.md
-    - name: NAB Test Extensible Enum
+    - name: Test Extensible Enum
       href: enum-nab-test-extensible-enum/TOC.yml
       topicHref: enum-nab-test-extensible-enum/index.md
   - name: Permission Sets
@@ -106,6 +118,9 @@
     - name: item
       href: ws-page-nab-tool-tips/TOC.yml
       topicHref: ws-page-nab-tool-tips/index.md
+    - name: wsDeprecated
+      href: ws-page-nab-ws-deprecated/TOC.yml
+      topicHref: ws-page-nab-ws-deprecated/index.md
 - name: API Objects
   href: api-objects.md
   items:
@@ -115,12 +130,21 @@
     - name: customer
       href: api-page-test-customer-api/TOC.yml
       topicHref: api-page-test-customer-api/index.md
+    - name: entityName
+      href: api-page-nab-api-deprecated/TOC.yml
+      topicHref: api-page-nab-api-deprecated/index.md
     - name: test
       href: api-page-nab-api-test/TOC.yml
       topicHref: api-page-nab-api-test/index.md
     - name: testSub
       href: api-page-nab-api-sub-test/TOC.yml
       topicHref: api-page-nab-api-sub-test/index.md
+  - name: API Queries
+    href: api-queries.md
+    items:
+    - name: entityName
+      href: api-query-api-query/TOC.yml
+      topicHref: api-query-api-query/index.md
 - name: Deprecated Features
   href: deprecated-features.md
   items:
@@ -129,4 +153,13 @@
     items:
   - name: Tables
     href: deprecated-tables.md
+    items:
+  - name: Pages
+    href: deprecated-pages.md
+    items:
+  - name: Web Services Pages
+    href: deprecated-web-services-pages.md
+    items:
+  - name: API Pages
+    href: deprecated-api-pages.md
     items:
