--- a/extension/package.json
+++ b/extension/package.json
@@ -768,6 +768,7 @@
     "applicationinsights": "^2.2.0",
     "compare-versions": "^3.6.0",
     "format-duration": "^1.3.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "minimatch": "^3.0.4",
     "node-powershell": "^3.3.1",
@@ -777,8 +778,7 @@
     "strip-json-comments": "^3.1.1",
     "time-stamp": "^1.1.0",
     "txml": "^4.0.1",
-    "uuid": "^8.3.0",
-    "js-yaml": "^4.1.0"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
@@ -786,6 +786,7 @@
     "@types/format-duration": "^1.0.1",
     "@types/glob": "^7.1.3",
     "@types/js-yaml": "^4.0.5",
+    "@types/json-schema": "^7.0.15",
     "@types/lodash": "^4.14.168",
     "@types/minimatch": "^3.0.4",
     "@types/mocha": "^8.0.4",
