--- a/extension/package.json
+++ b/extension/package.json
@@ -366,7 +366,7 @@
           },
           "NAB.TranslationSuggestionPaths": {
             "type": "array",
-            "description": "Supply any relative paths that contains xlf files that should be used when matching translations. The \"NAB: Refresh XLF files from g.xlf\" function will try to match any untranslated targets with targets in the xlf files in the provided folders that has matching target language.",
+            "description": "Supply any relative or absolute paths that contains xlf files that should be used when matching translations. The \"NAB: Refresh XLF files from g.xlf\" function will try to match any untranslated targets with targets in the xlf files in the provided folders that has matching target language.",
             "scope": "resource"
           },
           "NAB.ShowXlfHighlights": {
